<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="A picture of a food item category" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/categoryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="@dimen/recycler_item_title_text_size" />

        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            android:textSize="@dimen/recycler_item_description_text_size" />

        <TextView
            android:id="@+id/expirationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expiration_text"
            android:textSize="@dimen/recycler_item_expiration_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/editButton"
            android:layout_width="@dimen/recycler_edit_button_width"
            android:layout_height="@dimen/recycler_edit_button_height"
            android:text="@string/edit_button_text"
            android:textSize="@dimen/recycler_edit_button_text_size"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>
